# ageml

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
ageml/: continuous_retraining_test.py  performance_estimation_test.py  temporal_degradation_test.py
agingml/: continuous_retraining_test.py  performance_estimation.py  performance_estimation_test.py  temporal_degradation_test.py
data/: avocados_demand_forecasting_dataset.csv
experiments/: avocado_aging.py  avocado_performance_estimation.py  avocado_retraining.py  taxi_aging.py  taxi_performance_estimation.py  taxi_retraining.py
notebooks/: 2.0-continuous-retraining-sketch.ipynb  3.0-performance-estimation-sketch.ipynb  avocado-create-demand-forecasting-dataset.ipynb  avocado-demand-forescasting-baseline.ipynb  avocado_performance_estimation_results.ipynb  avocado_process_aging_results.ipynb  avocado_retraining_results.ipynb  continuous_retraining_sketch.ipynb  evaluate_performance_estimation.ipynb  evaluation_framework_sketch.ipynb  hyperparameter-optimization-test.ipynb  taxi-create-demand-forecasting-dataset.ipynb  taxi-demand-forescasting-baseline.ipynb  taxi_performance_estimation_results.ipynb  taxi_process_aging_results.ipynb  taxi_retraining_results.ipynb
notebooks/experiments/: avocados_demand_forescasting_baseline.ipynb  create_avocado_demand_forecasting_dataset.ipynb  taxi_demand_forescasting_baseline.ipynb
src/ageml/: __init__.py  temporal_degradation.py
src/ageml/datasets/: __init__.py  datasets.py
tests/: test_temporal_degradation.py
(+1 files in other folders)
