[build-system]
requires = ["setuptools"]

####################
# Project Metadata #
####################

[project]
name = "ageml"
description = "Study temporal performance degradation of machine learning models."
version = "0.1.0"
authors = [
    {name = "Santiago Viquez", email="santi.viquez@gmail.com"},
]

requires-python = ">=3.10"
# add your direct, abstract dependencies here
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "tqdm"
]

############################
# Setuptools Configuration #
############################

[tool.setuptools]
include-package-data = true  # include non-python files too

[tool.setuptools.packages.find]
where = ["src"]